@@ -26,6 +26,12 @@
 	string.
 	(gnus-button-alist): Also catch `<f1> k ...'.
 
+2007-03-25  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>
+
+	* gnus-msg.el (gnus-setup-message, gnus-inews-add-send-actions): Move
+	evaluation of gnus-extended-version to ensure correct generation of the
+	User-Agent header when message-generate-headers-first is used.
+
 2007-03-24  Simon Josefsson  <simon@josefsson.org>
 
 	* hashcash.el (hashcash-generate-payment-async): Don't crash if
